# elasticsearch

./: .env-example  Cargo.toml  DEPLOYMENT_README.md  Dockerfile  Dockerfile-8000  README.md  elastic-mcp.json5  index.ts
.buildkite/: default-pipeline.yml  docker-push.sh  pipeline.yml
crates/elastic-mcp/: Cargo.toml
crates/elastic-mcp/src/: cli.rs  lib.rs
crates/elastic-mcp/src/protocol/: http.rs  stdio.rs
crates/elastic-mcp/src/servers/: aggregate.rs  proxy.rs
crates/elastic-mcp/src/servers/elasticsearch/: base_tools.rs  mod.rs  query_templates.rs
crates/elastic-mcp/src/utils/: interpolator.rs  mod.rs  rmcp_ext.rs
src/: cli.rs  lib.rs  main.rs
src/protocol/: http.rs
src/servers/: mod.rs  proxy.rs
src/servers/elasticsearch/: base_tools.rs  mod.rs
src/servers/elasticsearch/_data/: esql_reference.md
src/utils/: interpolator.rs
tests/: http_tests.rs
