[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/elastic-mcp"]

[workspace.dependencies]

elasticsearch = { version = "9.0.0-alpha.1", git = "https://github.com/elastic/elasticsearch-rs", branch = "new-with-creds" }

# Main branch, 2025-06-26
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "b9d7d61ebd6e8385cbc4aa105d4e25774fc1a59c" }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "b9d7d61ebd6e8385cbc4aa105d4e25774fc1a59c" }

tokio = "1"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
# Not added, as tower-http has a panic handling middleware
#panic = "abort"
