[package]
name = "elastic-mcp"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
thiserror = "2"
elasticsearch = "9.0.0-alpha.1"
serde-aux = "4"

rmcp = { workspace = true, features = ["server", "client", "transport-sse-client", "transport-streamable-http-client", "transport-sse-server", "transport-io", "transport-streamable-http-server", "auth", "transport-child-process"] }

rmcp-macros = { workspace = true }

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
]}

futures = "0.3.31"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal", "process"] }
tokio-util = "0.7"
axum = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_json5 = "0.2"

# Same as rmcp
schemars = { version = "0.8", features = ["chrono"] }

http = "1.3.1"

indexmap = { version = "2", features = ["serde"] }
itertools = "0.12.1"
